# pytorch-auto-drive

./: autotest_culane.sh  grad_sam.py  neck_test.py
configs/lane_detection/bezierlanenet/: resnet18_culane_aug1b_test.py
configs/lane_detection/common/datasets/: _utils.py
tools/: culane_list_convertor.py
tools/culane_evaluation/: CMakeLists.txt  evaluate
tools/culane_evaluation/include/: counter.hpp  lane_compare.hpp  spline.hpp
tools/culane_evaluation_py/: culane_metric.py
tools/vis/: lane_img_dir.py
utils/: __init__.py  common.py  curve_utils.py  logger.py  registry.py
utils/csrc/: apis.py
utils/datasets/: culane_vis.py  image_folder_lane_base.py
utils/losses/: hungarian_bezier_loss.py
utils/models/: _utils.py
utils/models/common_models/: __init__.py
utils/models/common_models/module/: __init__.py  ca.py  cbam.py  cbam_fpn.py  dcn.py  fpn.py  positional_non_local.py  sa.py
utils/models/common_models/neck/: __init__.py  cbam_fpn.py  dc_fpn.py  fafpn.py  fefpn.py  fpn.py  pafpn.py  pefpn.py
utils/models/common_models/plugins/: conv_projection_1d.py
utils/models/lane_detection/: __init__.py  bezier_base.py  bezier_lane_net.py  laneatt.py  mymodel.py
utils/runners/: base.py  lane_det_trainer.py  lane_det_visualizer.py
